record overflow fix

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -21,6 +21,7 @@
 
 body {
   background: #3b3b3b;
+  overflow-x: hidden;
 }
 
 .content {
